--- a/index.html
+++ b/index.html
@@ -68,6 +68,25 @@
                     <h2>whatsapp</h2>
                     <span class='username'>admin daphneiole</span>
                 </a>
+
+                 <a href="https://shp.ee/ezjes9r" target="_blank" rel="noopener">
+                    <li
+                        style="background: linear-gradient(to right, #8e2de2, #4a00e0);">
+                        <img style="width: 30px;height: 30px; object-fit: fill;" src="shopee.png" alt="shopee logo">
+                    </li>
+                    <h2>Shopee</h2>
+                    <span class='username'>daphneiole</span>    
+                </a>
+
+
+                <a href="https://wa.me/6289526751094" target="_blank" rel="noopener">
+                    <li
+                    style="background: linear-gradient(to right, #0866C2, #044d96);">
+                    <img class="svg-white" src="lazada.png" alt="lazada logo">
+                    </li>
+                    <h2>Lazada</h2>
+                    <span class='username'>daphneiole</span>
+                </a>
                 
                 <a href="https://www.tiktok.com/@daphneiole?_t=8fe2OW7HUmI&_r=1" target="_blank" rel="noopener">
                     <li
