--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </header>
         <section>
             <ul>
-                <a href="https://bodasgede31.github.io/b2cbodasgede/" target="_blank" rel="noopener">
+                <a href="https://bdneira3.github.io/daphneiole-/" target="_blank" rel="noopener">
                     <li
                         style="background: linear-gradient(to right, #8e2de2, #4a00e0);">
                         <i data-feather="chrome"></i>
