--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <ul>
                 <a href="https://bdneira3.github.io/daphneiole-/" target="_blank" rel="noopener">
                     <li
-                        style="background: linear-gradient(to right, #8e2de2, #4a00e0);">
+                        style="background: linear-gradient(to right, #000000, #000000);">
                         <i data-feather="chrome"></i>
                     </li>
                     <h2>Website</h2>
