--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                 <a href="https://wa.me/6289526751094" target="_blank" rel="noopener">
                     <li
-                    style="background: linear-gradient(to right, #0866C2, #044d96);">
+                    style="background: linear-gradient(to right, #000000, #000000);">
                     <img class="svg-white" src="whatsapp.png" alt="whatsapp logo">
                     </li>
                     <h2>whatsapp</h2>
@@ -71,7 +71,7 @@
 
                  <a href="https://shp.ee/rfufnj6" target="_blank" rel="noopener">
                     <li
-                        style="background: linear-gradient(to right, #8e2de2, #4a00e0);">
+                        style="background: linear-gradient(to right, #000000, #000000);">
                         <img style="width: 30px;height: 30px; object-fit: fill;" src="shopee.png" alt="shopee logo">
                     </li>
                     <h2>Shopee</h2>
@@ -81,7 +81,7 @@
 
                 <a href="https://wa.me/6289526751094" target="_blank" rel="noopener">
                     <li
-                    style="background: linear-gradient(to right, #0866C2, #044d96);">
+                    style="background: linear-gradient(to right, #000000, #000000);">
                     <img class="svg-white" src="lazada.png" alt="lazada logo">
                     </li>
                     <h2>Lazada</h2>
@@ -90,7 +90,7 @@
                 
                 <a href="https://www.tiktok.com/@daphneiole?_t=8fe2OW7HUmI&_r=1" target="_blank" rel="noopener">
                     <li
-                    style="background: linear-gradient(to right, #EE1D52, #69C9D0);">   
+                    style="background: linear-gradient(to right, #000000, #000000);">   
                     <img class="svg-white" src="tiktok.png" alt="TikTok logo">
                     </li>
                     <h2>TikTok</h2>
@@ -100,7 +100,7 @@
 
                 <a href="https://www.facebook.com/profile.php?id=100095348687843&mibextid=ZbWKwL" target="_blank" rel="noopener">
                     <li
-                    style="background: linear-gradient(to right, #2673ca, #346485);">
+                    style="background: linear-gradient(to right, #000000, #000000);">
                     <img style="width: 30px;height: 30px; object-fit: fill;" src="facebook.png" alt="facebook logo">
                 </li>
                     <h2>Facebook</h2>
@@ -111,7 +111,7 @@
 
                 <a href="https://youtube.com/@Neira-rh4mj?si=QobtUTjno5n_y_Hd" target="_blank" rel="noopener">
                     <li
-                    style="background: linear-gradient(to right, #9676FC, #765dca);">
+                    style="background: linear-gradient(to right, #000000, #000000);">
                     <img class="svg-white" src="youtube.png" alt="youtube logo">
                     </li>
                     <h2>youtube</h2>
