--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
                 <a href="https://instagram.com/daphneiole_?igshid=OGQ5ZDc2ODk2ZA==" target="_blank" rel="noopener">
                     <li
-                    style="background: linear-gradient(to right, #8e2de2, #e2c72d);">   
+                    style="background: linear-gradient(to right, #000000, #000000);">   
                     <i data-feather="instagram"></i>
                     </li>
                     <h2>Instagram</h2>
