--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <span class='username'>admin daphneiole</span>
                 </a>
 
-                 <a href="https://shp.ee/rfufnj6" target="_blank" rel="noopener">
+                 <a href="https://shp.ee/a3a7xa0" target="_blank" rel="noopener">
                     <li
                         style="background: linear-gradient(to right, #000000, #000000);">
                         <img style="width: 30px;height: 30px; object-fit: fill;" src="shopee.png" alt="shopee logo">
